exports[`<Header /> renders correctly with collapsed option 1`] = `
<header
  className="sc-dxgOiQ huMqzU">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with default options 1`] = `
<header
  className="sc-dxgOiQ huMqzU">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed and collapsed options 1`] = `
<header
  className="sc-dxgOiQ fhLSeg">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed option 1`] = `
<header
  className="sc-dxgOiQ fhLSeg">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given large logo 1`] = `
<header
  className="sc-dxgOiQ huMqzU">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        Large
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given small logo 1`] = `
<header
  className="sc-dxgOiQ huMqzU">
  <a
    className="sc-EHOje iGeBUa"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        Small
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with theme 1`] = `
<header
  className="sc-dxgOiQ huMqzU">
  <a
    className="sc-EHOje iFCtkw"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb kuJgEm">
    <button
      className="fa fa-bars sc-ifAKCX bixEKO sc-bdVaJa jxNjZi"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;
